Fix category card layout: icon colour, title spacing, lock position
- Use tertiary colour for all category icons (consistent, not per-category)
- Display icon as block with margin below for better title spacing
- Fix lock icon positioning to bottom-right corner of card
- Target correct .category-box-heading wrapper for icon sizing

--- a/common/common.scss
+++ b/common/common.scss
@@ -149,18 +149,26 @@ a {
       .category-details {
         padding: 1.5em;
         position: relative;
-        .badge-category__icon .d-icon {
-          font-size: 3em;
-          display: block;
-          margin-bottom: 0.25em;
+
+        // Category icon from category-icons component
+        .category-box-heading {
+          .badge-category__icon {
+            display: block;
+            margin-bottom: 0.5em;
+            .d-icon {
+              font-size: 3em;
+              color: var(--tertiary);
+            }
+          }
         }
+
+        // Lock icon for restricted categories
         .d-icon-lock {
-          font-size: 0.75em !important;
+          font-size: 0.65em !important;
           position: absolute;
-          bottom: 0.75em;
-          right: 0.75em;
-          opacity: 0.4;
-          display: inline;
+          bottom: 1em;
+          right: 1em;
+          opacity: 0.3;
         }
       }
       .category-logo {
